--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <p>
         "Selamat Hari Raya Idul Fitri 1442 H. Semoga Allah SWT meridai kita
         untuk menerapkan permata kebijaksanaan dari Ramadan ke dalam kehidupan
-        sehari-hari. Minal aidin wal faizin."
+        sehari-hari. Minal aidin wal faizin. Mohon Maaf Lahir dan Batin."
       </p>
       <!-- <button>Subscribe</button> -->
     </div>
