--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <!-- <button>Subscribe</button> -->
     </div>
     <div class="container">
-      <button class="subscribe">Buka Cuy</button>
+      <button class="subscribe">Buka Ya</button>
     </div>
     <script src="app.js"></script>
   </body>
