--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="modal">
-      <div class="close-btn">X</div>
+      <div class="close-btn"></div>
       <!-- <h1>Hi Zey, Welcome.</h1> -->
       <h1>Rafli Mengucapkan</h1>
       <img src="./Mosq.svg" alt="" />
